force-app/main/default/objects/redwing__Question__c/fields/redwing__Allow_Partial_Credit__c.field-meta.xml
<CustomField>
    <fullName>redwing__Allow_Partial_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Partial Credit</label>
    <type>Checkbox</type>
</CustomField>