force-app/main/default/objects/redwing__Question__c/fields/redwing__Correct_Boolean__c.field-meta.xml
<CustomField>
    <fullName>redwing__Correct_Boolean__c</fullName>
    <label>Correct True/False</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>