force-app/main/default/objects/redwing__Question__c/fields/redwing__Correct_Number__c.field-meta.xml
<CustomField>
    <fullName>redwing__Correct_Number__c</fullName>
    <label>Correct Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>