force-app/main/default/objects/redwing__Question__c/fields/redwing__Media_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Media_URL__c</fullName>
    <inlineHelpText>Add a URL with a video or an audio which will be displayed to a user as a part of a question</inlineHelpText>
    <label>Media URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>