force-app/main/default/objects/redwing__Question__c/fields/redwing__Question_Bank_Question__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Bank_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Bank Question</label>
    <referenceTo>redwing__Question_Bank_Question__c</referenceTo>
    <relationshipLabel>Quiz Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>