force-app/main/default/objects/redwing__Question__c/fields/redwing__Question_Feedback_Visibility__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Feedback_Visibility__c</fullName>
    <inlineHelpText>Option for displaying the Question-level feedback for users.</inlineHelpText>
    <label>Question Feedback Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show when incorrect</fullName>
                <default>true</default>
                <label>Show when incorrect</label>
            </value>
            <value>
                <fullName>Show always</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>