force-app/main/default/objects/redwing__Question__c/fields/redwing__Question_Line__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Line__c</fullName>
    <label>Quiz Page</label>
    <referenceTo>redwing__Question_Line__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>