force-app/main/default/objects/redwing__Question__c/fields/redwing__Question_Topic__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Topic</label>
    <referenceTo>redwing__Question_Topic__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>