force-app/main/default/objects/redwing__Question__c/fields/redwing__Randomize__c.field-meta.xml
<CustomField>
    <fullName>redwing__Randomize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Randomize Answers</label>
    <type>Checkbox</type>
</CustomField>