force-app/main/default/objects/redwing__Question__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>SelectOneQuestion</fullName>
            </value>
            <value>
                <fullName>SelectMultipleQuestion</fullName>
            </value>
            <value>
                <fullName>True/False</fullName>
            </value>
            <value>
                <fullName>Fill in Blanks</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>