force-app/main/default/objects/redwing__Question__c/validationRules/redwing__CorrectBoolean_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__CorrectBoolean_Required</fullName>
    <active>true</active>
    <errorConditionFormula>redwing__Question_Line__r.redwing__Quiz__r.redwing__Enable_Survey_Mode__c == false &amp;&amp; ISBLANK(TEXT(redwing__Correct_Boolean__c)) &amp;&amp;  TEXT(redwing__Type__c) == &quot;True/False&quot;</errorConditionFormula>
    <errorMessage>You must specify a correct true/false value for this type of question</errorMessage>
</ValidationRule>